--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,30 @@ body {
 
 .rgb {
     display: inline-block;
-    width: 100%;
-    height: 25%;
+    position: relative;
+    width: 500px;
+    margin: auto;
+    height: 400px;
     background-color: blue;
 }
+
+.blue {
+    float: left;
+    background-color: blueviolet;
+    width: 500px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+
+
+/*.blue #blue {
+    position: relative;
+    left: 50%;
+}*/
 
 .cores {
     width: 40%;
