--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,21 @@ h1 {
     text-align: center;
 }
 
+.result-rgb {
+    display: flex;
+    position: relative;
+    right: 10%;
+    justify-content: center;
+    align-items: center;
+}
+
+.rgb-value {
+    position: absolute;
+    margin: auto;
+    top: 60%;
+    right: 3%;
+}
+
 .cores {
     position: absolute;
     width: 150px;
