--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 h1 {
     display: inline-block;
     position: absolute;
-    top: 60px;
+    margin: 0 auto 32% auto;
 }
 
 .container {
@@ -23,6 +23,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .box {
@@ -30,13 +31,12 @@ h1 {
     position: relative;
     width: 50%;
     height: 55%;
+    justify-content: center;
+    align-items: center;
 }
 
 .rgb {
-    position: absolute;
-    width: 46%;
-    margin: auto;
-    height: 100%;
+    flex: 1;
     text-align: center;
     padding-top: 3%;
 }
@@ -50,8 +50,16 @@ h1 {
     text-align: center;
 }
 
+.result-rgb {
+    flex: 1;
+    position: relative;
+}
+
 .cores {
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width: 150px;
     height: 150px;
     right: 15.3%;
@@ -59,3 +67,9 @@ h1 {
     border: 1px solid #000;
     transition: background 100ms;
 }
+/* 
+.rgb-value {
+    position: absolute;
+    margin: 0 auto;
+    text-align: center;
+} */
